--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- description -->
               <div class="desc col-md-6">
                 <p> 
-                  <a class="project-title"> Bike There </a><a class="social-sm" href="https://github.com/jongmini"><i class="fa fa-github fa"></i>Project Code</a><a href="http://bikethere.herokuapp.com" target="_blank">View Project</a><br>
+                  <a class="project-title" href="http://bikethere.herokuapp.com" target="_blank"> Bike There </a><a class="view-code" href="https://github.com/jongmini/WDI_wk4_wk5_project" target="_blank"><i class="fa fa-github fa"></i>Project Code</a><br>
                    I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is a bicycle-commuting app that displays a turn-by-turn direction as well as elevation information along a chosen route. Bike There is great for tourists and commuters who are looking for a safe and easy bike route.  <br><br>
                   <strong> Technology</strong><br>
                   This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery <br><br>
