adding project links and github repo links to the rest of the projects

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
             <!-- description -->
             <div class="desc col-md-6">
               <p> 
-                <h3 class="project-title"> Good or Evil </h3> Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. The concept for this group project was inspired by a growing interest on the web for a space where social interactions can take place anonymously, such as secret sharing sites. We wanted to take that idea further and create a space where a discussion around whether a post is good or evil can happen anonymously. <br><br>
+                <a class="project-title" href="http://goodorevil.herokuapp.com" target="_blank"> Good or Evil </a><a class="view-code" href="https://github.com/jongmini/good_or_evil" target="_blank"><i class="fa fa-github fa"></i>Project Code</a><br>
+                Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. The concept for this group project was inspired by a growing interest on the web for a space where social interactions can take place anonymously, such as secret sharing sites. We wanted to take that idea further and create a space where a discussion around whether a post is good or evil can happen anonymously. <br><br>
                 <strong> Technology</strong><br>
                 This application is built using the Amazon S3, Carrierwave, CanvasJS, Ruby on Rails, JavaScript, jQuery, AJAX <br><br>
                 <strong>Team Members</strong><br>
@@ -179,7 +180,8 @@
             <!-- description -->
             <div class="desc col-md-6">
               <p> 
-                <h3 class="project-title"> Project Lorax </h3> Project Lorax monitors the soil moisture level for your plants. When the soil is dry, the app will send you a tweet notification to remind you to water your plant. <br><br>
+                <a class="project-title" href="http://projectlorax.herokuapp.com" target="_blank"> Project Lorax </a><a class="view-code" href="https://github.com/jongmini/lorax_client" target="_blank"><i class="fa fa-github fa"></i>Client-Layer Code</a><a class="view-code" href="https://github.com/jongmini/lorax_service" target="_blank"><i class="fa fa-github fa"></i>Service-Layer Code</a><br>
+                 Project Lorax monitors the soil moisture level for your plants. When the soil is dry, the app will send you a tweet notification to remind you to water your plant. <br><br>
                 <strong> Technology</strong><br>
                 This application is built using the Raspbery Pi, soil moisture sensor, ChartJS, NodeJS, Express, PostgreSQL, MongoDB, BackboneJS </strong><br><br>
                 <strong>Team Member</strong><br>
