adusting the view-code class so that two links for github repo for project lorax can fit in the div

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         <!-- description -->
               <div class="desc col-md-6">
                 <p> 
-                  <a class="project-title" href="http://bikethere.herokuapp.com" target="_blank"> Bike There </a><a class="view-code" href="https://github.com/jongmini/WDI_wk4_wk5_project" target="_blank"><i class="fa fa-github fa"></i>Project Code</a><br>
+                  <a class="project-title" href="http://bikethere.herokuapp.com" target="_blank"> Bike There </a>
+                  <a class="view-code" href="https://github.com/jongmini/WDI_wk4_wk5_project" target="_blank"><i class="fa fa-github fa"></i>Project Code</a>
+                  <br>
                    I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is a bicycle-commuting app that displays a turn-by-turn direction as well as elevation information along a chosen route. Bike There is great for tourists and commuters who are looking for a safe and easy bike route.  <br><br>
                   <strong> Technology</strong><br>
                   This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery <br><br>
@@ -134,7 +136,9 @@
             <!-- description -->
             <div class="desc col-md-6">
               <p> 
-                <a class="project-title" href="http://goodorevil.herokuapp.com" target="_blank"> Good or Evil </a><a class="view-code" href="https://github.com/jongmini/good_or_evil" target="_blank"><i class="fa fa-github fa"></i>Project Code</a><br>
+                <a class="project-title" href="http://goodorevil.herokuapp.com" target="_blank"> Good or Evil </a>
+                <a class="view-code" href="https://github.com/jongmini/good_or_evil" target="_blank"><i class="fa fa-github fa"></i>Project Code</a>
+                <br>
                 Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. The concept for this group project was inspired by a growing interest on the web for a space where social interactions can take place anonymously, such as secret sharing sites. We wanted to take that idea further and create a space where a discussion around whether a post is good or evil can happen anonymously. <br><br>
                 <strong> Technology</strong><br>
                 This application is built using the Amazon S3, Carrierwave, CanvasJS, Ruby on Rails, JavaScript, jQuery, AJAX <br><br>
@@ -180,7 +184,10 @@
             <!-- description -->
             <div class="desc col-md-6">
               <p> 
-                <a class="project-title" href="http://projectlorax.herokuapp.com" target="_blank"> Project Lorax </a><a class="view-code" href="https://github.com/jongmini/lorax_client" target="_blank"><i class="fa fa-github fa"></i>Client-Layer Code</a><a class="view-code" href="https://github.com/jongmini/lorax_service" target="_blank"><i class="fa fa-github fa"></i>Service-Layer Code</a><br>
+                <a class="project-title" href="http://projectlorax.herokuapp.com" target="_blank"> Project Lorax </a>
+                <a class="view-code" href="https://github.com/jongmini/lorax_service" target="_blank"><i class="fa fa-github fa"></i>Service-Layer</a>
+                <a class="view-code" href="https://github.com/jongmini/lorax_client" target="_blank"><i class="fa fa-github fa"></i>Client-Layer</a>
+                <br>
                  Project Lorax monitors the soil moisture level for your plants. When the soil is dry, the app will send you a tweet notification to remind you to water your plant. <br><br>
                 <strong> Technology</strong><br>
                 This application is built using the Raspbery Pi, soil moisture sensor, ChartJS, NodeJS, Express, PostgreSQL, MongoDB, BackboneJS </strong><br><br>
