--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
   <div id="fourth-div">
     <div class="contact-container" id="contact">
-        <h1>contact me</h1><br>
+        <h1>Contact Me</h1><br>
         <div class="contactme"><a class="social resume" href="Samuel_Choi_Resume.pdf" target="_blank">Download My Resume<i class="fa fa-file-text fa-2x icon-lg"></i></a>
         </div>
         <div class="contactme">
