adding screeshots of all projects

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Samuel Choi</title>
 
+    <link rel="shortcut icon" href="http://i.imgur.com/fsM4ywVs.jpg?1">
+
+
     <link rel="stylesheet" type ="text/css" href="public/css/bootstrap.css">
 
     <link rel="stylesheet" type ="text/css" href="public/css/style.css">
@@ -111,7 +114,7 @@
           <div class="panel-body">
             <div class="col-md-12">
               <div class="pro-img col-md-4">
-                <img class="screenshot" src="http://i.imgur.com/8SIq5ux.jpg">
+                <img class="screenshot" src="http://i.imgur.com/nJxsmQg.png">
               </div>
               <div class="desc col-md-8">
                 <strong>Design process: </strong> <br>
@@ -131,7 +134,7 @@
 
             <!-- screenshot and link -->
             <div class="proj-img col-md-6">
-              <a href="http://goodorevil.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/XlWV249.png"></a>
+              <a href="http://goodorevil.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/bF6jLcT.png"></a>
             </div>
             <!-- description -->
             <div class="desc col-md-6">
@@ -162,7 +165,7 @@
           <div class="panel-body">
             <div class="col-md-12">
               <div class="pro-img col-md-4">
-                <img class="screenshot" src="http://i.imgur.com/8SIq5ux.jpg">
+                <img class="screenshot" src="http://i.imgur.com/kC09N0K.png">
               </div>
               <div class="desc col-md-8">
                 <strong>Design process:</strong><br>
@@ -192,7 +195,7 @@
                 <strong> Technology</strong><br>
                 This application is built using the Raspbery Pi, soil moisture sensor, ChartJS, NodeJS, Express, PostgreSQL, MongoDB, BackboneJS </strong><br><br>
                 <strong>Team Member</strong><br>
-                Graham Wong <br><br>
+                <a href="http://grahamtylerwong.com/" target="_blank">Graham Wong<a> <br><br>
                 <strong>Project Length </strong><br>
                 14 days
               </p>
@@ -200,7 +203,7 @@
 
             <!-- screenshot and link -->
             <div class="proj-img col-md-6">
-              <a href="http://projectlorax.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/mWD664u.png"></a>
+              <a href="http://projectlorax.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/yuZLgEs.png"></a>
             </div>
           </div>
           <h4 class="panel-title click-here">
