--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
   <!-- closing the #first-div -->
   </div> 
   <!-- closing .container div -->
-  </div>
+<!--   </div> -->
 
-  <div id="second-div">
-  </div>
+<!--   <div id="second-div">
+  </div> -->
 
-  <!-- opening .container div again -->
-  <div class="container">
+<!--   opening .container div again -->
+<!--   <div class="container"> -->
 
   <div id="third-div">
 
