placing the project diagram to the right side of the div

--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
                 No plant was harmed during this project.<br>
 
               </div>
-             <!--  <div class="pro-img col-md-8">
+             <div class="pro-img col-md-8">
                 <img class="screenshot" src="http://i.imgur.com/DARkd14.png">
               </div>
               <br><br>
-              <div class="desc col-md-12">
+           <!--    <div class="desc col-md-12">
                 <strong>Anything Interesting about the Project: </strong><br>
                 No plant was harmed during this project.<br>
               </div> -->
