editing the intro paragraph

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a id="name" href="#home">Samuel Choi</a>
     </div>
     <div class="nav-right">
-      <a href="#aboutme">About </a>
+<!--       <a href="#aboutme">About </a> -->
       <a href="#projects">Projects </a>
       <a href="#contact">Contact Me </a>
     </div>
@@ -42,7 +42,7 @@
 
   <div class="about row" id="home"> 
 
-    <div class="aboutme col-md-12" id="aboutme">
+    <div class="aboutme col-md-12">
 
         
         <div class="col-md-4">
@@ -50,10 +50,11 @@
         </div>
         <div class="col-md-8">
           <p> <h3> Hello There! </h3> <br> 
-            Welcome to my portfolio!<br>
-            I have recently become a web developer but I have been a problem-solver for the most part of my life. I am a curious person by nature and I have been able to travel and live abroad for several years observing how people from different parts of the world live. I am passionate about creating websites and web apps that help change our lives. If you have any project you want me to get involved in or just want to talk about any great ideas that excites you, please contact me.</p>
+            I'm a full stack web developer.<br>
+            I enjoy creating beautiful websites with focus on user interaction for the front-end as much as writing SQL queries, setting up database relationships and building server applications for the back-end.<br>
+            I have recently become a web developer but I have been a creative and logical problem-solver for most of my life. I am a curious person by nature and have been able to travel and live abroad for several years experiencing how people from different parts of the world live. I am passionate about projects that help improve people's lives and I am always looking for opportunites to learn something new. If you want to discuss projects or just want to talk about any great ideas that excites you, please contact me.</p>
         
-          <p><h3> Contact me! </h3></p>
+          <p><h4> Contact me! </h4></p>
           <div>
           <a class="social-sm" href="https://github.com/jongmini"><i class="fa fa-github fa-3x"></i></a>
           <a class="social-sm" href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-3x"></i></a>
